tdf#35957 check for preconditions earlier

This cuts the number of calls of
chart::VSeriesPlotter::calculateYMinAndMaxForCategory from ~10 billion
to 1760 and load time from a minute to a second...

Change-Id: I8ec07d82aa0e915659ce4cbdf6cd1bdd381d6245